Add css style and images

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webermelon - Home</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   </head>
   <body>
-    <header>
+    <header class="container">
       <nav>
         <div id="brand-logo">
-          <img src="" alt="webermelon logo" />
+          <img src="/assets/img/image 3.png" alt="webermelon logo" />
         </div>
         <div id="nav-menu">
           <ul>
@@ -25,120 +27,141 @@
       </nav>
     </header>
     <main>
-      <section id="banner">
+      <section id="banner" class="container">
         <div class="banner-container">
-          <div><p>Offshore web and software development company</p></div>
-          <h2>Hire skilled developers to build your Website & Apps</h2>
-          <p>
-            Webermelon is a Website and Software Development Company. We help
-            startups and businesses set up remote teams and build their web or
-            mobile application and websites.
+          <div class="banner-subtitle"><p>Offshore web and software development company</p></div>
+          <h1 class="banner-title">Hire skilled developers to build your Website & Apps</h1>
+          <p class="banner-description">
+            Webermelon is a Website and Software Development Company. We help startups
+            and businesses set up remote teams and build their web or mobile
+            application and websites.
           </p>
-          <div>
-            <button>Portfolio</button> <button>Start your project</button>
+          <div class="banner-buttons">
+            <button class="btn-portfolio">Portfolio</button>
+            <button class="btn-start-project">Start your project
+              <i class="fas fa-right-arrow"></i>
+            </button>
           </div>
         </div>
+        
       </section>
-      <section id="images">
-        <div class="image-container">
-          <img src="" alt="image 1" />
-          <img src="" alt="image 2" />
-          <img src="" alt="image 3" />
+      <section id="images" class="container">
+        <div class="image-wrapper">
+          <img src="/assets/img/IMG_1403 1.png" alt="image 1" />
+          <img src="/assets/img/IMG_1682 1.jpg" alt="image 3" />
+          <img src="/assets/img/IMG_1466.png" alt="image 2" />
         </div>
       </section>
-      <section id="analytics">
+      <section id="analytics" class="container">
         <div class="analytics-container">
           <div>
-            <h5>200+</h5>
+            <h5>200<span>+</span></h5>
             <p>Projects Completed</p>
           </div>
           <div>
-            <h5>20+</h5>
+            <h5>20<span>+</span></h5>
             <p>Countries Served</p>
           </div>
           <div>
-            <h5>150+</h5>
+            <h5>150<span>+</span></h5>
             <p>Satisfied Customers</p>
           </div>
         </div>
       </section>
-      <section id="qoutes">
+      <section id="qoutes" class="container">
         <div class="qoutes-container">
           <div class="qoutes-card">
-            <h5 id="user-say">
-              “This is the best place to get your website, software or mobile
-              apps developed. Or hiring skilled developers as a team or
+            <p class="user-say">
+              “This is the best place to get your <span>website, software or mobile
+                apps developed. Or hiring skilled developers</span> as a team or
               individual.”
-            </h5>
-            <span>
-              <img src="" alt="qoutes icon" />
-            </span>
-            <p id="user-name">Tanjil Ahmed Fahim</p>
-            <p>
+            </p>
+            <div>
+              <img src="/assets/img/Frame.png" alt="qoutes icon" />
+            </div>
+            <p class="user-name">Tanjil Ahmed Fahim</p>
+            <p class="user-position">
               <span id="designation">CEO</span> -
               <span id="company">Webermelon</span>
             </p>
           </div>
         </div>
       </section>
-      <section id="partners">
-        <div class="partners-container">
+      <section id="partners" class="container">
+        <div class="partners-wrapper">
           <div class="partner-logo-wrapper">
-            <img src="" alt="partner logo 1" />
+            <img src="/assets/img/image 8.png" alt="partner logo 1" />
           </div>
           <div class="partner-logo-wrapper">
-            <img src="" alt="partner logo 2" />
+            <img src="/assets/img/image 4.png" alt="partner logo 2" />
           </div>
           <div class="partner-logo-wrapper">
-            <img src="" alt="partner logo 3" />
+            <img src="/assets/img/image 6.png" alt="partner logo 3" />
           </div>
           <div class="partner-logo-wrapper">
-            <img src="" alt="partner logo 4" />
+            <img src="/assets/img/image 5.png" alt="partner logo 4" />
           </div>
           <div class="partner-logo-wrapper">
-            <img src="" alt="partner logo 5" />
+            <img src="/assets/img/image 9.png" alt="partner logo 5" />
           </div>
         </div>
       </section>
-      <section id="our services">
-        <div class="services-container">
-          <div id="services-title">
-            <h3>Our Services</h3>
+      <section id="services">
+        <div class="container services-wrapper">
+         <div class="services-description">
+          <div class="services-title">
+            <h1>Our<br>Services</h1>
             <p>
               From designs to marketing, Webermelon serves all digital services
               your business needs to start and be succeeded
             </p>
-            <button>Learn More</button>
-            <div class="service-footer">
-              <p>5 Star Recommended on Trustpilot</p>
-              <p class="">
-                <span>*</span>
-                <span>Trustpilot</span>
-                <span>*</span>
-              </p>
+            <button class="button
+            button--primary ">Learn More</button>
+          </div>
+          <div class="service-footer">
+            <p>5 Star Recommended on Trustpilot</p>
+            <div class="trustpilot">
+              <div>
+                <img src="/assets/img/Shape.png" alt="">
+              </div>
+              <div><h3>Trustpilot</h3></div>
+              <div>
+               <img src="/assets/img/Star x2.png" alt="">
+               <img src="/assets/img/Star x2.png" alt="">
+               <img src="/assets/img/Star x2.png" alt="">
+               <img src="/assets/img/Star x2.png" alt="">
+               <img src="/assets/img/Star x2.png" alt="">
+              </div>
             </div>
           </div>
+         </div>
           <div class="service-wrapper">
-            <div id="service-card">
-              <h3>Web & Mobile AppsDevelopment</h3>
+            <div class="service-card-1">
+              <div>
+                <h2>Web & Mobile Apps Development</h3>
               <p>
                 Webermelon is a Website and Software Development Company. We
                 help startups and businesses set up remote teams and build their
                 SaaS, PaaS, apps, and websites.
               </p>
+              </div>
+              <img src="/assets/img/Web Application Development 1.png" alt="">
             </div>
-            <div id="service-card">
-              <h3>Web Design andDevelopment</h3>
+            <div class="service-card-2">
+              <div>
+                <h2>Web Design and Development</h3>
               <p>
                 Webermelon is a Website and Software Development Company. We
                 help startups and businesses set up remote teams and build their
                 SaaS, PaaS, apps, and websites.
               </p>
+              </div>
+              <img src="/assets/img/Web Design and Development 1.png" alt="">
             </div>
           </div>
         </div>
       </section>
-      <section id="case-studies">
+      <section id="case-studies" class="container">
         <div class="case-studies-container">
           <div class="case-studies-heading">
             <h2>Case Studies</h2>
@@ -149,7 +172,7 @@
           </div>
           <div class="case-studies-wrapper">
             <div class="case-studies-card">
-              <img src="" alt="case-studies image" />
+              <img src="/assets/img/c1.png" alt="case-studies image" />
               <div>
                 <span>Website</span>
                 <span>Wordpress</span>
@@ -157,7 +180,7 @@
               <h6>Web Application Development</h6>
             </div>
             <div class="case-studies-card">
-              <img src="" alt="case-studies image" />
+              <img src="/assets/img/c2.png" alt="case-studies image" />
               <div>
                 <span>Website</span>
                 <span>Wordpress</span>
@@ -165,7 +188,7 @@
               <h6>Web Application Development</h6>
             </div>
             <div class="case-studies-card">
-              <img src="" alt="case-studies image" />
+              <img src="/assets/img/c3.png" alt="case-studies image" />
               <div>
                 <span>Website</span>
                 <span>Wordpress</span>
@@ -173,7 +196,7 @@
               <h6>Web Application Development</h6>
             </div>
             <div class="case-studies-card">
-              <img src="" alt="case-studies image" />
+              <img src="/assets/img/c4.png" alt="case-studies image" />
               <div>
                 <span>Website</span>
                 <span>Wordpress</span>
@@ -217,8 +240,8 @@
           </div>
         </div>
       </section>
-      <section id="testimonials">
-        <div class="testimonials-container">
+      <section id="testimonials" class="container">
+        <div class="testimonials-container " >
           <div class="case-studies-heading">
             <h2>testimonials</h2>
             <p>
@@ -229,11 +252,11 @@
           <div class="testimonials-wrapper">
             <div class="testimonials-card">
               <div class="profile-img">
-                <img src="" alt="" />
+                <img src="/assets/img/Group 89.png" alt="" />
               </div>
-              <h6>James Pattinson</h6>
+              <h3>James Pattinson</h3>
               <p>CEO - StudioTEM</p>
-              <div class="starts">
+              <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -249,16 +272,15 @@
               </p>
               <a href=""
                 ><span>View review on facebook</span
-                ><i class="fas fa-right-arrow"></i
-              ></a>
+                ><i class="fas fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="testimonials-card">
               <div class="profile-img">
-                <img src="" alt="" />
+                <img src="/assets/img/Group 89.png" alt="" />
               </div>
-              <h6>James Pattinson</h6>
+              <h3>James Pattinson</h3>
               <p>CEO - StudioTEM</p>
-              <div class="starts">
+              <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -274,74 +296,78 @@
               </p>
               <a href=""
                 ><span>View review on facebook</span
-                ><i class="fas fa-right-arrow"></i
-              ></a>
+                ><i class="fas fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
           <div class="slider-bullet-point"></div>
         </div>
       </section>
-      <section id="start-project">
+      <section id="start-project" class="container">
         <div class="start-project-container">
           <div class="start-project-left">
-            <h3>Accelerate Your Software Development Potential with Us</h3>
+            <h1>Accelerate Your Software Development Potential with Us</h1>
             <p>
               With our innovative solutions and dedicated expertise, success is
               a guaranteed outcome. Let's accelerate together towards your goals
               and beyond.
             </p>
-            <a href="">
-              <span>Start your project</span>
-              <span><i class="fas fa-right-arrow"></i></span>
-            </a>
+            <button  class="button button--primary">
+              <a href="">
+                <span>Start your project</span>
+                <span><i class="fas fa-solid fa-arrow-right"></i></span>
+              </a>
+            </button>
           </div>
-          <div>
-            <img src="" alt="start project image" />
+          <div class="start-project-right">
+            <img src="/assets/img/Frame 129.png" alt="start project image" />
           </div>
         </div>
       </section>
     </main>
-    <footer>
-      <div class="footer-header">
-        <span>Let’s get start</span>
-        <h2>hi@webermelon.com</h2>
-      </div>
-      <div class="footer-content">
-        <div id="address">
-          <div id="usa-address">
-            <p>USA Address:</p>
-            <p>25108 Marguerite Pkwy Suite A-236 Mission Viejo Ca 92692</p>
+    <footer class="footer">
+      <div class="footer-wrapper container">
+        <div class="footer-header">
+          <small>Let’s get start</small>
+          <h1><span style="color: #b0b0b0;">hi@</span>webermelon.com</h1>
+        </div>
+        <div class="footer-content">
+          <div id="address">
+            <div id="usa-address">
+              <h4>USA Address:</h4>
+              <p>25108 Marguerite Pkwy Suite A-236 Mission Viejo Ca 92692</p>
+            </div>
+            <div id="uk-address">
+              <h4>UK Address:</h4>
+              <p>Webermelon Limited 71-75 Shelton Street, Covent Garden London</p>
+            </div>
+            <div id="bd-address">
+              <h4>Bangladesh Address:</h4>
+              <p>
+                Webermelon, 51/A, TahRub Tower, 3 Jakir Hussain Road, South
+                Khulshi,  Chittagong
+              </p>
+            </div>
           </div>
-          <div id="uk-address">
-            <p>UK Address:</p>
-            <p>Webermelon Limited 71-75 Shelton Street, Covent Garden London</p>
-          </div>
-          <div id="bd-address">
-            <p>Bangladesh Address:</p>
-            <p>
-              Webermelon, 51/A, TahRub Tower, 3 Jakir Hussain Road, South
-              Khulshi,  Chittagong
-            </p>
+          <div class="our-experties">
+            <h4>Our Expertise</h4>
+            <ul>
+              <li>Laravel Developer</li>
+              <li>PHP Developer</li>
+              <li>WordPress Theme Development</li>
+              <li>MERN Strack Development</li>
+              <li>WordPress Developer</li>
+              <li>Software Developer</li>
+              <li>Mobile App Developer</li>
+              <li>Vue Js Developer</li>
+              <li>Node Js Developer</li>
+            </ul>
           </div>
         </div>
-        <div>
-          <p>Our Expertise</p>
-          <ul>
-            <li>Laravel Developer</li>
-            <li>PHP Developer</li>
-            <li>WordPress Theme Development</li>
-            <li>MERN Strack Development</li>
-            <li>WordPress Developer</li>
-            <li>Software Developer</li>
-            <li>Mobile App Developer</li>
-            <li>Vue Js Developer</li>
-            <li>Node Js Developer</li>
-          </ul>
+        <div class="copyrights">
+          <p>© 2024 webermelon. All Rights Reserved</p>
         </div>
-      </div>
-      <div class="copyrights">
-        <p>© 2024 webermelon. All Rights Reserved</p>
       </div>
     </footer>
+    <script src="https://kit.fontawesome.com/f9ae33560e.js" crossorigin="anonymous"></script>
   </body>
 </html>
