--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webermelon - Home</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link
+      rel="shortcut icon"
+      href="/assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <header class="container">
@@ -29,21 +36,25 @@
     <main>
       <section id="banner" class="container">
         <div class="banner-container">
-          <div class="banner-subtitle"><p>Offshore web and software development company</p></div>
-          <h1 class="banner-title">Hire skilled developers to build your Website & Apps</h1>
+          <div class="banner-subtitle">
+            <p>Offshore web and software development company</p>
+          </div>
+          <h1 class="banner-title">
+            Hire skilled developers to build your Website & Apps
+          </h1>
           <p class="banner-description">
-            Webermelon is a Website and Software Development Company. We help startups
-            and businesses set up remote teams and build their web or mobile
-            application and websites.
+            Webermelon is a Website and Software Development Company. We help
+            startups and businesses set up remote teams and build their web or
+            mobile application and websites.
           </p>
           <div class="banner-buttons">
             <button class="btn-portfolio">Portfolio</button>
-            <button class="btn-start-project">Start your project
+            <button class="btn-start-project">
+              Start your project
               <i class="fas fa-right-arrow"></i>
             </button>
           </div>
         </div>
-        
       </section>
       <section id="images" class="container">
         <div class="image-wrapper">
@@ -72,9 +83,12 @@
         <div class="qoutes-container">
           <div class="qoutes-card">
             <p class="user-say">
-              “This is the best place to get your <span>website, software or mobile
-                apps developed. Or hiring skilled developers</span> as a team or
-              individual.”
+              “This is the best place to get your
+              <span
+                >website, software or mobile apps developed. Or hiring skilled
+                developers</span
+              >
+              as a team or individual.”
             </p>
             <div>
               <img src="/assets/img/Frame.png" alt="qoutes icon" />
@@ -108,55 +122,54 @@
       </section>
       <section id="services">
         <div class="container services-wrapper">
-         <div class="services-description">
-          <div class="services-title">
-            <h1>Our<br>Services</h1>
-            <p>
-              From designs to marketing, Webermelon serves all digital services
-              your business needs to start and be succeeded
-            </p>
-            <button class="button
-            button--primary ">Learn More</button>
-          </div>
-          <div class="service-footer">
-            <p>5 Star Recommended on Trustpilot</p>
-            <div class="trustpilot">
-              <div>
-                <img src="/assets/img/Shape.png" alt="">
-              </div>
-              <div><h3>Trustpilot</h3></div>
-              <div>
-               <img src="/assets/img/Star x2.png" alt="">
-               <img src="/assets/img/Star x2.png" alt="">
-               <img src="/assets/img/Star x2.png" alt="">
-               <img src="/assets/img/Star x2.png" alt="">
-               <img src="/assets/img/Star x2.png" alt="">
+          <div class="services-description">
+            <div class="services-title">
+              <h1>Our<br />Services</h1>
+              <p>
+                From designs to marketing, Webermelon serves all digital
+                services your business needs to start and be succeeded
+              </p>
+              <button class="button button--primary">Learn More</button>
+            </div>
+            <div class="service-footer">
+              <p>5 Star Recommended on Trustpilot</p>
+              <div class="trustpilot">
+                <div>
+                  <img src="/assets/img/Shape.png" alt="" />
+                </div>
+                <div><h3>Trustpilot</h3></div>
+                <div>
+                  <img src="/assets/img/Star x2.png" alt="" />
+                  <img src="/assets/img/Star x2.png" alt="" />
+                  <img src="/assets/img/Star x2.png" alt="" />
+                  <img src="/assets/img/Star x2.png" alt="" />
+                  <img src="/assets/img/Star x2.png" alt="" />
+                </div>
               </div>
             </div>
           </div>
-         </div>
           <div class="service-wrapper">
             <div class="service-card-1">
               <div>
-                <h2>Web & Mobile Apps Development</h3>
-              <p>
-                Webermelon is a Website and Software Development Company. We
-                help startups and businesses set up remote teams and build their
-                SaaS, PaaS, apps, and websites.
-              </p>
+                <h2>Web & Mobile Apps Development</h2>
+                <p>
+                  Webermelon is a Website and Software Development Company. We
+                  help startups and businesses set up remote teams and build
+                  their SaaS, PaaS, apps, and websites.
+                </p>
               </div>
-              <img src="/assets/img/Web Application Development 1.png" alt="">
+              <img src="/assets/img/Web Application Development 1.png" alt="" />
             </div>
             <div class="service-card-2">
               <div>
-                <h2>Web Design and Development</h3>
-              <p>
-                Webermelon is a Website and Software Development Company. We
-                help startups and businesses set up remote teams and build their
-                SaaS, PaaS, apps, and websites.
-              </p>
+                <h2>Web Design and Development</h2>
+                <p>
+                  Webermelon is a Website and Software Development Company. We
+                  help startups and businesses set up remote teams and build
+                  their SaaS, PaaS, apps, and websites.
+                </p>
               </div>
-              <img src="/assets/img/Web Design and Development 1.png" alt="">
+              <img src="/assets/img/Web Design and Development 1.png" alt="" />
             </div>
           </div>
         </div>
@@ -241,7 +254,7 @@
         </div>
       </section>
       <section id="testimonials" class="container">
-        <div class="testimonials-container " >
+        <div class="testimonials-container">
           <div class="case-studies-heading">
             <h2>testimonials</h2>
             <p>
@@ -272,7 +285,8 @@
               </p>
               <a href=""
                 ><span>View review on facebook</span
-                ><i class="fas fa-solid fa-arrow-right"></i></a>
+                ><i class="fas fa-solid fa-arrow-right"></i
+              ></a>
             </div>
             <div class="testimonials-card">
               <div class="profile-img">
@@ -296,7 +310,8 @@
               </p>
               <a href=""
                 ><span>View review on facebook</span
-                ><i class="fas fa-solid fa-arrow-right"></i></a>
+                ><i class="fas fa-solid fa-arrow-right"></i
+              ></a>
             </div>
           </div>
           <div class="slider-bullet-point"></div>
@@ -311,7 +326,7 @@
               a guaranteed outcome. Let's accelerate together towards your goals
               and beyond.
             </p>
-            <button  class="button button--primary">
+            <button class="button button--primary">
               <a href="">
                 <span>Start your project</span>
                 <span><i class="fas fa-solid fa-arrow-right"></i></span>
@@ -328,7 +343,7 @@
       <div class="footer-wrapper container">
         <div class="footer-header">
           <small>Let’s get start</small>
-          <h1><span style="color: #b0b0b0;">hi@</span>webermelon.com</h1>
+          <h1><span style="color: #b0b0b0">hi@</span>webermelon.com</h1>
         </div>
         <div class="footer-content">
           <div id="address">
@@ -338,7 +353,9 @@
             </div>
             <div id="uk-address">
               <h4>UK Address:</h4>
-              <p>Webermelon Limited 71-75 Shelton Street, Covent Garden London</p>
+              <p>
+                Webermelon Limited 71-75 Shelton Street, Covent Garden London
+              </p>
             </div>
             <div id="bd-address">
               <h4>Bangladesh Address:</h4>
@@ -368,6 +385,9 @@
         </div>
       </div>
     </footer>
-    <script src="https://kit.fontawesome.com/f9ae33560e.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f9ae33560e.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
