--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <div id="brand-logo">
           <img src="/assets/img/image 3.png" alt="webermelon logo" />
         </div>
+        <div id="mobile-menu-toggle">
+          <button id="menu-btn">&#9776;</button> <!-- Hamburger Icon -->
+        </div>
         <div id="nav-menu">
           <ul>
-            <li><a href="">Servies</a></li>
+            <li><a href="">Services</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">About Us</a></li>
           </ul>
@@ -33,6 +36,7 @@
         </div>
       </nav>
     </header>
+    
     <main>
       <section id="banner" class="container">
         <div class="banner-container">
@@ -389,5 +393,6 @@
       src="https://kit.fontawesome.com/f9ae33560e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/assets/js/navbar.js"></script>
   </body>
 </html>
