--- a/index.html
+++ b/index.html
@@ -318,7 +318,10 @@
               ></a>
             </div>
           </div>
-          <div class="slider-bullet-point"></div>
+          <div class="slider-dots">
+            <span class="dot" data-slide="0"></span>
+            <span class="dot" data-slide="1"></span>
+          </div>
         </div>
       </section>
       <section id="start-project" class="container">
@@ -394,5 +397,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/assets/js/navbar.js"></script>
+    <script src="/assets/js/slider.js"></script>
   </body>
 </html>
